--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -181,7 +181,7 @@
                                             <div class="user-box">
                                                 <div class="avatar-lg"><img src="{{ user.avatar(60) }}" alt="image profile" class="avatar-img rounded"></div>
                                                 <div class="u-text">
-                                                    <h4>{{ user.firstname }}</h4>
+                                                    <h4>{{ user.getName('short') }}</h4>
                                                     <p class="text-muted">{{ user.email }}</p>
                                                 </div>
                                             </div>
