page manage pages and fixes

--- a/src/Template/cup/page/form.twig
+++ b/src/Template/cup/page/form.twig
@@ -93,7 +93,7 @@
                                     'name': 'type',
                                     'message': 'Если нет понимания на что влияет это поле, оставьте значение по-умолчанию',
                                     'args': {
-                                        'option': reference('/Reference/Page::TYPE'),
+                                        'option': reference('/Domain/Types/PageTypeType::LIST'),
                                         'selected': item.type
                                     }
                                 } %}
