add publications crud and pub.category crud

--- a/src/Template/cup/publication/form.twig
+++ b/src/Template/cup/publication/form.twig
@@ -76,6 +76,7 @@
                                             'label': 'Категория',
                                             'type': 'select',
                                             'name': 'category',
+                                            'message': '<a href="/cup/publication/category/add" class="btn btn-xs btn-info float-right"><i class="fa fa-plus"></i> Добавить категорию</a>',
                                             'args': {
                                                 'required': true,
                                                 'option': list.pluck('title', 'uuid').all(),
