--- a/src/Template/cup/form.twig
+++ b/src/Template/cup/form.twig
@@ -89,7 +89,7 @@
         {% endif %}
 
         {% if message is not empty %}
-            <small class="form-text text-muted">{{ message }}</small>
+            <small class="form-text text-muted">{{ message|raw }}</small>
         {% endif %}
     </div>
 {% endblock %}
