add forms crud and form.data rd

--- a/src/Template/cup/form/form.twig
+++ b/src/Template/cup/form/form.twig
@@ -97,7 +97,7 @@
                                     'args': {
                                         'value': item.origin ? item.origin|join('\n') : '*',
                                         'required': true,
-                                        'placeholder': ' example.com',
+                                        'placeholder': 'https://example.com/my-page',
                                         'style': 'min-height: 150px;'
                                     }
                                 } %}
