--- a/src/Template/cup/publication/index.twig
+++ b/src/Template/cup/publication/index.twig
@@ -16,7 +16,7 @@
             <div class="card">
                 <div class="card-header">
                     <div class="d-flex align-items-center">
-                        <h4 class="card-title">Список публикаций на сайте ({{ publications.count() }})</h4>
+                        <h4 class="card-title">Список публикаций ({{ publications.count() }})</h4>
                         <a href="/cup/publication/add" class="btn btn-primary btn-round ml-auto">
                             <i class="fa fa-plus"></i>
                             Добавить публикацию
