--- a/src/Template/cup/catalog/product/form.twig
+++ b/src/Template/cup/catalog/product/form.twig
@@ -257,7 +257,7 @@
                         <div class="row">
                             <div class="col-md-4">
                                 {% include 'cup/form.twig' with {
-                                    'label': 'Поле 1',
+                                    'label': category.product.field_1 ?? 'Поле 1',
                                     'type': 'text',
                                     'name': 'field1',
                                     'message': 'Индивидуальное поле',
@@ -269,7 +269,7 @@
 
                             <div class="col-md-4">
                                 {% include 'cup/form.twig' with {
-                                    'label': 'Поле 2',
+                                    'label': category.product.field_2 ?? 'Поле 2',
                                     'type': 'text',
                                     'name': 'field2',
                                     'message': 'Индивидуальное поле',
@@ -281,7 +281,7 @@
 
                             <div class="col-md-4">
                                 {% include 'cup/form.twig' with {
-                                    'label': 'Поле 3',
+                                    'label': category.product.field_3 ?? 'Поле 3',
                                     'type': 'text',
                                     'name': 'field3',
                                     'message': 'Индивидуальное поле',
@@ -293,7 +293,7 @@
 
                             <div class="col-md-4">
                                 {% include 'cup/form.twig' with {
-                                    'label': 'Поле 4',
+                                    'label': category.product.field_4 ?? 'Поле 4',
                                     'type': 'text',
                                     'name': 'field4',
                                     'message': 'Индивидуальное поле',
@@ -305,7 +305,7 @@
 
                             <div class="col-md-4">
                                 {% include 'cup/form.twig' with {
-                                    'label': 'Поле 5',
+                                    'label': category.product.field_5 ?? 'Поле 5',
                                     'type': 'text',
                                     'name': 'field5',
                                     'message': 'Индивидуальное поле',
