--- a/src/Template/cup/catalog/category/index.twig
+++ b/src/Template/cup/catalog/category/index.twig
@@ -52,27 +52,30 @@
                                         <td>{{ item.field2 }}</td>
                                         <td>{{ item.field3 }}</td>
                                         <td class="text-center">
-                                            <div class="btn-group dropdown">
-                                                <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
-                                                    <i class="fas fa-bars"></i>
-                                                </button>
-                                                <ul class="dropdown-menu" role="menu">
-                                                    <li>
-                                                        <a href="/cup/catalog/{{ item.uuid }}/product" class="btn btn-link"><i class="fab fa-product-hunt"></i> Список товаров</a>
-                                                    </li>
-                                                    <li>
+                                            <div class="btn-group">
+                                                <a href="/cup/catalog/{{ item.uuid }}/product" class="btn btn-outline-info btn-sm">
+                                                    <i class="fas fa-eye fa-lg"></i>
+                                                </a>
+                                                <div class="btn-group dropdown">
+                                                    <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
+                                                        <i class="fas fa-bars"></i>
+                                                    </button>
+                                                    <ul class="dropdown-menu" role="menu">
                                                         <a href="/cup/catalog/{{ item.uuid }}/edit" class="btn btn-link"><i class="fas fa-edit"></i> Изменить</a>
-                                                    </li>
-                                                    <li><div class="dropdown-divider"></div></li>
-                                                    <li>
-                                                        <form action="/cup/catalog/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить публикацию?');">
-                                                            <button type="submit" class="btn btn-link text-danger">
-                                                                <i class="fas fa-trash-alt"></i> Удалить
-                                                            </button>
-                                                        </form>
-                                                    </li>
-                                                </ul>
+                                                        </li>
+                                                        <li><div class="dropdown-divider"></div></li>
+                                                        <li>
+                                                            <form action="/cup/catalog/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить публикацию?');">
+                                                                <button type="submit" class="btn btn-link text-danger">
+                                                                    <i class="fas fa-trash-alt"></i> Удалить
+                                                                </button>
+                                                            </form>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+
                                             </div>
+
                                         </td>
                                     </tr>
                                 {% endfor %}
