--- a/src/Template/cup/catalog/category/form.twig
+++ b/src/Template/cup/catalog/category/form.twig
@@ -235,11 +235,12 @@
 
                                 {% for file in files %}
                                     <div class="p-2 d-inline-block m-2 bg-grey2 rounded">
-                                        <a href="/cup/catalog/{{ item.uuid }}/product">
-                                            <img class="rounded" height="100" src="{{ file.getPublicPath() }}" alt="preview" />
+                                        <a href="{{ file.getPublicPath() }}" target="_blank">
+                                            <img class="rounded" height="100" src="{{ file.getPublicPath() }}" alt="preview" data-toggle="tooltip" data-placement="top" title="{{ file.name }}" />
                                         </a>
-                                        <div class="text-right pt-2 pb-2">
-                                            <button type="submit" name="delete-image" value="{{ file.uuid }}" class="btn btn-danger btn-icon btn-xs">
+                                        <div class="pt-2">
+                                            <span class="d-inline-block text-small">{{ file.getSize() }}</span>
+                                            <button type="submit" name="delete-image" value="{{ file.uuid }}" class="float-right btn btn-danger btn-icon btn-xs">
                                                 <i class="fas fa-trash-alt"></i>
                                             </button>
                                         </div>
