--- a/src/Template/cup/catalog/product/form.twig
+++ b/src/Template/cup/catalog/product/form.twig
@@ -14,7 +14,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="card">
-                <form method="post">
+                <form method="post" enctype="multipart/form-data">
                     <div class="card-header">
                         <div class="card-head-row">
                             <div class="card-title">{{ item.uuid ? 'Редактирование товара ' ~ item.title : 'Создание нового товара' }} в категории {{ category.title }}</div>
@@ -313,6 +313,37 @@
                                         'value': item.field5,
                                     }
                                 } %}
+                            </div>
+                        </div>
+
+                        <hr>
+
+                        <div class="row">
+                            <div class="col-md-12">
+                                {% include 'cup/form.twig' with {
+                                    'label': 'Изображения',
+                                    'type': 'file',
+                                    'name': 'files[]',
+                                    'args': {
+                                        'class': ['d-block', 'btn', 'btn-sm', 'bg-grey2'],
+                                        'multiple': true,
+                                        'accept': 'image/*'
+                                    }
+                                } %}
+
+                                {% for file in files %}
+                                    <div class="p-2 d-inline-block m-2 bg-grey2 rounded">
+                                        <a href="{{ file.getPublicPath() }}" target="_blank">
+                                            <img class="rounded" height="100" src="{{ file.getPublicPath() }}" alt="preview" data-toggle="tooltip" data-placement="top" title="{{ file.name }}" />
+                                        </a>
+                                        <div class="pt-2">
+                                            <span class="d-inline-block text-small">{{ file.getSize() }}</span>
+                                            <button type="submit" name="delete-image" value="{{ file.uuid }}" class="float-right btn btn-danger btn-icon btn-xs">
+                                                <i class="fas fa-trash-alt"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                {% endfor %}
                             </div>
                         </div>
 
